feat: 新增參數刪除 (Soft Delete) API
